cluster/apps/default/firefly-iii/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name firefly-iii
  labels: &labels
    app.kubernetes.io/name: *name
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: *name
          image: fireflyiii/core:version-5.7.1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 150Mi
          ports:
            - name: &port http
              protocol: TCP
              containerPort: 8080
          volumeMounts:
            - name: firefly-iii-data
              mountPath: /var/www/html/firefly-iii/storage/upload
          startupProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 30
          livenessProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: firefly-iii-data
          persistentVolumeClaim:
            claimName: firefly-iii-data
