cluster/apps/default/firefly-iii/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii
  labels:
    app.kubernetes.io/name: firefly-iii
spec:
  selector:
    app.kubernetes.io/name: firefly-iii
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  type: ClusterIP
